add: /datasource/details route
